--- a/index.html
+++ b/index.html
@@ -1,7 +1,50 @@
-<!DOCTYPE html>
+<!DOCTYPE hmtl>
 <html lang="sl-si">
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-  </head>
+
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="stil.css">
+	<title>Test</title>
+</head>
+
+<body>
+
+	<div class="zunanji">
+		<img src="slike/d-vidmar.png" alt="d-vidmar" id="ikona">
+		<h1>O MENI</h1>
+		<p>Sem dijak 3. letnika srednje Elektrotehniške in računalniške šole na Šolskem centru Nova Gorica.</p>
+	</div>
+	
+	<div class="zunanji">
+		<h1>KAJ POČNEM?</H1>
+		<div class="zbirkaslik">
+			<img src="slike/java_logo.png" title="Java" alt="java_logo" height="150px" class="logo">
+			<img src="slike/html_logo.png" title="HTML" alt="html_logo" height="150px" class="logo">
+			<img src="slike/css_logo.png" title="CSS" alt="css_logo" height="150px" class="logo">
+			<img src="slike/powershell_logo.png" title="PowerShell" alt="powershell_logo" height="150px" class="logo">
+			<img src="slike/sql_logo.png" title="SQL" alt="sql_logo" height="150px" class="logo">
+			<img src="slike/arduino_logo.svg" title="Arduino" alt="arduino_logo" height="150px" class="logo">
+			<img src="slike/freecad_logo.png" title="FreeCAD" alt="freecad_logo" height="150px" class="logo">
+			<img src="slike/blender_logo.png" title="Blender" alt="blender_logo" height="150px" class="logo">
+		</div>
+		<p>V šoli se učim programiranja v Javi, izdelovanja spletnih strani s HTML-jem in CSS-om, pisanja PowerShell skript in jezika SQL. V prostem času programiram Arduino in rišem 3D modele za 3D tiskalnik, natančnejše modele v FreeCAD-u, obeske in druge "igračke" pa v Blenderju.</p>
+	</div>
+	
+	<div class="zunanji">
+		<h1>MOJI PROJEKTI</h1>
+		<div class="zbirkaprojektov">
+		
+			<a href="https://github.com/d-vidmar/Arduino-menjalnik-za-simulator-voznje" target="_blank">
+				<div class="projekt">
+					<img src="slike/menjalnik_projekt.jpg" title="Arduino menjalnik" alt="arduino_menjalnik" height="300px" class="projektslika">
+					<h2>Menjalnik za simulator vožnje</h2>
+					<p>Menjalnik s 6 prestavami + R in enim gumbom, ki uporablja Arduino Leonardo/Micro mikrokontroler.
+				</div>
+			</a>
+			
+		</div>
+	</div>
+	
+</body>
+
 </html>
